testsuite/bsc.typechecker/kind/ClassDefResGivenNum.bs.bsc-out.expected
checking package dependencies
compiling ClassDefResGivenNum.bs
Error: "ClassDefResGivenNum.bs", line 3, column 7: (T0021)
  Kind error at:
    Foo

  Expected kind:
    #

  Inferred kind:
    *

