testsuite/bsc.typechecker/kind/ClassDefResGivenNum.bs
package ClassDefResGivenNum () where

class (Foo :: * -> #) a where
    x :: Bool

